# Vkita

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Engine/: CMakeLists.txt  Vkita.h
Engine/Application/: App.cpp  App.h  Application.cpp  Application.h  Event.h  KeyEvent.h  Layer.h  LayerStack.h  MouseEvent.h  Window.cpp  Window.h
Engine/Common/: Base.h  Buffer.cpp  EntryPoint.cpp  FileSystem.cpp  GraphicsManager.cpp  GraphicsManager.h  InputManager.cpp  Log.h  MemoryManager.cpp  MemoryManager.h  Timestep.h  UUID.cpp  UUID.h  main.cpp
Engine/Core/: Application.cpp  Application.h  Base.h  Buffer.h  Config.cpp  Config.h  DebugManager.cpp  DebugManager.h  EntryPoint.cpp  EntryPoint.h  FileSystem.cpp  FileSystem.h  GraphicsManager.cpp  GraphicsManager.h  Image.cpp  Image.h  InputManager.cpp  InputManager.h  KeyCodes.h  Layer.h  LayerStack.cpp  Log.cpp  Log.h  MemoryManager.cpp  MemoryManager.h  MouseCodes.h  PhysicsManager.cpp  PhysicsManager.h  SceneManager.cpp  SceneManager.h  main.cpp
Engine/Debug/: Assert.h
Engine/Event/: KeyEvent.h
Engine/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
Engine/Game/: Camera.h  EditorCamera.cpp  EditorCamera.h  GameLogic.cpp  GameLogic.h  Layer.h  LayerStack.h
Engine/Input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h
Engine/Interface/: IRuntimeModule.h
Engine/Math/: Glm.h
Engine/Memory/: Allocator.cpp  Allocator.h
Engine/Parser/: AssimpParser.cpp  AssimpParser.h
Engine/Renderer/: Buffer.cpp  Buffer.h  DescriptorBinding.h  DescriptorSetManager.cpp  DescriptorSetManager.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  UniformBuffer.cpp  UniformBuffer.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h  VulkanBuffer.cpp  VulkanBuffer.h
Engine/Rendering/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  IndexBuffer.cpp  IndexBuffer.h  Texture2D.cpp  Texture2D.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
Engine/Scene/: Light.h  Material.h  Mesh.cpp  Mesh.h  Scene.h  SceneNode.cpp  SceneNode.h  Transform.cpp  Transform.h
Engine/Utils/: FileIO.cpp  FileIO.h
Engine/Vulkan/: Buffer.cpp  Buffer.h  BufferUtil.cpp  BufferUtil.h  CommandBuffers.cpp  CommandBuffers.h  CommandPool.cpp  CommandPool.h  Common.cpp  Common.h  DebugUtils.cpp  DebugUtils.h  DebugUtilsMessenger.cpp  DebugUtilsMessenger.h  DepthBuffer.cpp  DepthBuffer.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h  Device.cpp  Device.h  DeviceMemory.cpp  DeviceMemory.h  Enumerate.h  Fence.cpp  Fence.h  FrameBuffer.cpp  FrameBuffer.h  Image.cpp  Image.h  ImageMemoryBarrier.h  ImageView.cpp  ImageView.h  Initializers.h  Instance.cpp  Instance.h  Pipeline.cpp  (+19 more)
Engine/Window/: Window.cpp  Window.h
Resource/Scenes/basic_physics/: basic_physics.gltf
Resource/Scenes/lights/: directionlight.gltf  lights.gltf  pointlight.gltf
Resource/Scenes/nanosuit_gltf/: nanosuit.gltf
Resource/Shaders/: debug.frag  debug.vert  shader.frag  shader.vert
Sandbox/: CMakeLists.txt
Sandbox/Source/: ExamplerLayer.cpp  ExamplerLayer.h  SandboxApp.cpp
Test/: BasicPhysicsTest.cpp  CMakeLists.txt  EditorCameraTest.cpp  FileSystemTest.cpp  InputEventTest.cpp  SceneLoadTest.cpp  SceneRenderTest.cpp
